# ExpensiveOptimBenchmark

./: .buildinfo  .gitignore  CFD.Dockerfile  CFD.Singularity  LICENSE  README.md  approaches.html  buildCFD_docker.bat  buildCFD_docker.sh  buildCFD_singularity.sh  configure_julia.py  generatereq.sh  genindex.html  index.html  objects.inv  problems.html  pyproject.toml  requirements.txt  requirements_smac.txt  running_experiments.html  search.html  searchindex.js  zzreferences.html
_sources/: approaches.rst.txt  index.rst.txt  problems.rst.txt  running_experiments.rst.txt  zzreferences.rst.txt
_sources/extending/: dependency_management.rst.txt
_static/: documentation_options.js
doc/: Makefile
doc/source/: approaches.rst  bibliography.bib  conf.py  index.rst  problems.rst  running_experiments.rst
expensiveoptimbenchmark/: benchmark_exp.py  convex_exp.py  evalWW_sorted_surrogate.py  evalWWsurrogate.py  fitsurrogate_joined_WW.py  fitsurrogate_separate_WW.py  plot_utils.py  plot_utils_MVRSMpaper.py  requirements.txt  rosenbrock_exp.py  run_experiment.py  testSurrogate.py
expensiveoptimbenchmark/problems/: DockerCFDBenchmark.py  DockerHospitalBenchmark.py  TSP.py  WW_sorted_surrogate.py  WWsurrogate.py  base.py  convex.py  hpo.py  linear_MIVABOfunction.py  maxcut.py  rosenbrock.py  rosenbrock_binarized.py  (+8 more)
extending/: adding_approaches.html  adding_problems.html  dependency_management.html  extending.html
notebooks/: logvsnolog_variance.ipynb  quniformvsrandint.ipynb  sampletimevsquality.ipynb  timevsquality.ipynb
scripts/: openfoam.sh  smac.sh  swig
(+38 files in other folders)
