[tool.poetry]
name = "expensiveoptimbenchmark"
version = "0.1.0"
description = "A benchmark for expensive optimization problems."
authors = ["Arthur <arthur.guijt12@gmail.com>", "Laurens <>"]

[tool.poetry.dependencies]
python = "^3.7"
hyperopt = "^0.2.4"
smac = "^0.12.2"
pyGPGO = "^0.4.0-alpha.1"
numpy = "^1.18.4"
scikit-learn = "^0.23.1"
scipy = "^1.4.1"
pymc3 = "^3.8"
numba = "^0.49.1"
tsplib95 = "^0.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
